--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,6 @@ if ( CMAKE_COMPILER_IS_GNUCC )
 
 endif()
 
-add_executable(testStructures ../tests/testStructures.cpp structures.cpp)
-add_executable(basicChess ../tests/basicchess.cpp game.cpp game.h structures.cpp)
-add_executable(stockfishcli game.cpp structures.cpp ../applications/stockfishWrapper.cpp)
+add_executable(testStructures ../tests/testStructures.cpp cli/structures.cpp)
+add_executable(basicChess ../tests/basicchess.cpp cli/game.cpp cli/game.h cli/structures.cpp)
+add_executable(stockfishcli cli/game.cpp cli/structures.cpp ../applications/stockfishWrapper.cpp)
